--- a/src/styles/partials/general.scss
+++ b/src/styles/partials/general.scss
@@ -2,6 +2,7 @@
 *{margin: 0;
   padding: 0;
   box-sizing: border-box;
+font-family: Arial, Helvetica, sans-serif;  
 }
 
 /* GENERICS */
@@ -9,17 +10,13 @@ body{
   background-color: black;
   padding: 50px 0
 }
-
-ul{
-  list-style-type: none;  
-
-  a{
-   all:unset;
-  } 
-}
-/* 
-img{
-  width: 100%;
-}
-
- */
+  ul{
+    list-style-type: none;  
+      a{
+        text-decoration: none;
+        color: inherit;
+      }
+    }
+    
+    
+  
