added comicsList components

--- a/src/styles/partials/general.scss
+++ b/src/styles/partials/general.scss
@@ -8,10 +8,12 @@ font-family: Arial, Helvetica, sans-serif;
 /* GENERICS */
 body{
   background-color: black;
+  padding-top: 30px;
 }
   ul{
     list-style-type: none;  
   }
+
   a{
     text-decoration: none;
     color: inherit;
